# google-account-automanager

./: .gitignore  pyproject.toml
docs/plans/: 2026-03-04-cpa-oauth-binding-design.md  2026-03-04-cpa-oauth-binding-implementation.md  2026-03-05-cpa-antigravity-oauth-binding-implementation.md  2026-03-05-cpa-antigravity-oauth-binding-verification.md  2026-03-07-cpa-antigravity-oauth-google-login-implementation.md
openspec/: config.yaml
openspec/specs/account-management/: spec.md
openspec/specs/automation/: spec.md
openspec/specs/browser-management/: spec.md
openspec/specs/data-layer/: spec.md
openspec/specs/task-orchestration/: spec.md
openspec/specs/web-ui/: spec.md
web/: README.md  select-dev-ports.ps1  start_backend.sh  start_frontend.sh
web/backend/: CLAUDE.md  schemas.py
web/backend/routers/: config.py  tasks.py
web/backend/services/: cpa_management.py  cpa_oauth_antigravity.py
web/backend/tests/: conftest.py  test_config_router_cpa_fields.py  test_cpa_management_client.py  test_cpa_oauth_callback_parser.py  test_cpa_oauth_google_login.py  test_schema_cpa_oauth.py  test_tasks_cpa_oauth_bind.py
web/frontend/: .env.example  vite.config.js
web/frontend/src/api/: index.js
web/frontend/src/stores/: websocket.js
web/frontend/src/views/: TasksView.vue
